--- a/.gitignore
+++ b/.gitignore
@@ -192,3 +192,8 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+open-agent-platform/
+oap-agent-supervisor/
+oap-langgraph-tools-agent/
+langconnect/
+.oap_pids
